# pyg-geometric-deep-learning

./: .gitignore  README.md  REFERENCES.md  VIDEOS.md  pyproject.toml  requirements.txt
00_setup/: check_install.py
01_fundamentals/: 01_graph_data_structure.py  02_message_passing.py  README.md
02_node_classification/: README.md  train.py
03_graph_classification/: README.md  train.py
04_link_prediction/: README.md  train.py
animations/: README.md  gat_attention.py  gcn_explained.py  gin_wl_test.py  graph_batching.py  make_thumbnails.py  message_passing.py  over_smoothing.py  render_all.py
notebooks/: 01_fundamentals.ipynb  02_node_classification.ipynb  03_graph_classification.ipynb  04_link_prediction.ipynb  README.md  _build_notebooks.py
project/: README.md  main.py
project/runs/MUTAG_gin/: metrics.json
project/src/: __init__.py  data.py  engine.py  models.py  viz.py
utils/: device.py  visualization.py
